--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	 <script src="index.js"></script>
 </head>
 <body>
-	<canvas id = "gameCanvas" width = "800" height = "1200"></canvas>
+
+	<p>Hello are you there</p>
+
+	<!--  <canvas id = "gameCanvas" width = "800" height = "1200"></canvas> -->
 </body>	
 </html>
