added tanks and tried to make them seperate classes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 	<title>Test canvas website</title>
 	<link rel="stylesheet" href="style.css">
-	 <script src="index.js"></script>
+	<script src="index.js"></script>
 </head>
 <body>
-
-	<p>Hello are you there</p>
-
-	<!--  <canvas id = "gameCanvas" width = "800" height = "1200"></canvas> -->
+	<div class = "titleDiv">
+			<h1>This is all a game</h1>
+	</div>
+	<canvas id = "gameCanvas" width = "1200" height = "900"></canvas>
 </body>	
 </html>
