--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<div class = "titleDiv">
-			<h1>This is all a game</h1>
+			<h1 id = "titleText">This is all a game</h1>
 	</div>
 	<canvas id = "gameCanvas" width = "1200" height = "900"></canvas>
 </body>	
-</html>
+</html>s
