testing this branch thing

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<div class = "titleDiv">
 			<h1 id = "titleText">This is all a game</h1>
 	</div>
-	<canvas id = "gameCanvas" width = "1200" height = "900"></canvas>
+	<canvas id = "gameCanvas" width = "1200" height = "800"></canvas>
 </body>	
-</html>s
+</html>
